{
    "name": "InputActions",
    "maps": [
        {
            "name": "Map",
            "id": "95938d53-4c5e-479f-8608-71910eae4289",
            "actions": [
                {
                    "name": "StickL",
                    "type": "Value",
                    "id": "8543e66a-f958-4705-a0aa-e10195579390",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StickR",
                    "type": "Value",
                    "id": "08090ec0-0e5d-4f48-b2ae-a4187be005c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "2a4e8dca-844c-449b-89ac-61c305582c40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "dd5d1066-001a-4c4f-bff1-920196d537db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "ad8353cd-337e-4c05-aaae-8a6c4d86bb70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "5b29bc84-7d14-4b0c-af21-05a8c2ff2131",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "029b408f-5cc4-40ab-b83f-3d08d2ff14a9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3c57e6ed-ebfa-40fa-9b76-4c974101ff7a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4df725fe-d020-417f-b515-aa7dee54658c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ca4c9c8a-350d-4d02-860f-18251f9e51cd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "58ea4620-d801-4434-a062-f077acc03812",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "50ef9eb3-a0a4-48b2-83ca-821cb5af5846",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a631145f-a4e7-47da-94f1-c11e69765f25",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "58db89d1-8fef-4a7d-adec-a33e25b952a2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e5841b61-5683-4c86-8233-85d9c76d08f3",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5d885194-84dc-4d80-b054-23c0d25679cc",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18becb8d-978f-4643-97e3-9f2eb61a218b",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "72ea0208-b931-4e8f-8356-4e3e0c46cabe",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "edf6bd82-f4e2-4ad7-9d74-af0df824b04a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8df5886-4a6f-4c39-a0df-e08847f1e5f1",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fe7e5a5-fa91-49ee-9e6c-82a544e5e0b0",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ebf3fd9-fec7-417a-aa20-157d01e162ae",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6eb8d57-054b-46cd-a173-56f885caaf93",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cb4c81f-46d9-432c-ac55-2a1f97f694b5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d69bd3fd-ca63-48bd-9544-647589764174",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8835ea85-8f22-40e6-9df7-1b2acbf41fc7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}